@@ -4,11 +4,18 @@ import com.barcode.recopo.card.domain.Card;
 import com.barcode.recopo.card.dto.CardRequestDto;
 import com.barcode.recopo.card.dto.CardResponseDto;
 import com.barcode.recopo.card.repository.CardRepository;
+import com.barcode.recopo.global.exception.CustomException;
+import com.barcode.recopo.global.exception.ErrorCode;
+import com.barcode.recopo.member.domain.Member;
+import com.barcode.recopo.member.repository.MemberRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -16,44 +23,81 @@ import java.util.List;
 public class CardService {
 
     private final CardRepository cardRepository;
+    private final MemberRepository memberRepository;
 
     @Transactional
-    public CardResponseDto createCard(CardRequestDto requestDto) {
-        Card card = Card.builder()
-                .title(requestDto.title())
-                .content(requestDto.content())
-                .build();
+    public CardResponseDto createCard(Long memberId, CardRequestDto requestDto) {
+        String extractedHashtags = extractHashtags(requestDto.content());
+
+        Member member = memberRepository.findById(memberId)
+                .orElseThrow(() -> new IllegalArgumentException("사용자를 찾을 수 없습니다."));
+
+        Card card = Card.create(
+                requestDto.title(),
+                requestDto.content(),
+                requestDto.category(),
+                extractedHashtags,
+                member
+        );
 
         Card savedCard = cardRepository.save(card);
 
         return new CardResponseDto(
                 savedCard.getCardId(),
+                savedCard.getMember().getMemberId(),
                 savedCard.getTitle(),
                 savedCard.getContent(),
+                savedCard.getHashtag(),
+                savedCard.getCategory(),
                 savedCard.getCreatedAt(),
                 savedCard.getUpdatedAt()
         );
     }
-    public List<CardResponseDto> getAllCards() {
-        return cardRepository.findAll().stream()
+
+    public List<CardResponseDto> getAllCards(Long memberId) {
+        return cardRepository.findByMemberMemberId(memberId).stream()
                 .map(card -> new CardResponseDto(
                         card.getCardId(),
+                        card.getMember().getMemberId(),
                         card.getTitle(),
                         card.getContent(),
+                        card.getHashtag(),
+                        card.getCategory(),
                         card.getCreatedAt(),
                         card.getUpdatedAt()))
-                .toList();
+                .collect(Collectors.toList());
     }
-    public CardResponseDto getCardById(Long cardId) {
+
+    public CardResponseDto getCardById(Long memberId, Long cardId) {
         Card card = cardRepository.findById(cardId)
-                .orElseThrow(() -> new IllegalArgumentException("해당 카드를 찾을 수 없습니다. ID: " + cardId));
+                .orElseThrow(() -> new CustomException(ErrorCode.CARD_NOT_FOUND));
+
+        // 2. 카드는 있는데, 내 카드가 아닌 경우
+        if (!card.getMember().getMemberId().equals(memberId)) {
+            throw new CustomException(ErrorCode.UNAUTHORIZED_CARD_ACCESS);
+        }
 
         return new CardResponseDto(
                 card.getCardId(),
+                card.getMember().getMemberId(),
                 card.getTitle(),
                 card.getContent(),
+                card.getHashtag(),
+                card.getCategory(),
                 card.getCreatedAt(),
                 card.getUpdatedAt()
         );
+    }
+
+    private String extractHashtags(String content) {
+        if (content == null || content.isEmpty()) return "";
+
+        Pattern pattern = Pattern.compile("#([\\w가-힣]+)");
+        Matcher matcher = pattern.matcher(content);
+
+        return matcher.results()
+                .map(mr -> mr.group(1))
+                .distinct()
+                .collect(Collectors.joining(","));
     }
 }
